--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.9.0",
     "pubnub": "^3.15.1",
+    "ramda": "^0.21.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^4.0.0",
